--- a/salary/styles.css
+++ b/salary/styles.css
@@ -6,36 +6,35 @@ body {
 .tables-and-charts {
     display: flex;
     justify-content: space-between;
-    align-items: stretch;
+    align-items: stretch; /* 确保表格和图表容器高度一致 */
 }
 
 .tables {
     width: 60%;
     display: flex;
     flex-direction: column;
-    max-height: 300px;
-    overflow-y: auto;
+    justify-content: stretch;
+    max-height: 300px; /* 限制表格区域的最大高度 */
+    overflow-y: auto;  /* 超过指定高度时，出现滚动条 */
 }
 
 .chart-container {
+    width: 100%;
+    max-width: 100%
+    height: auto;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    max-width: 100%;
-    height: auto;
+    justify-content: stretch;
 }
 
 canvas {
     max-width: 100%;
-    height: auto;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
-    display: block;
-    overflow-x: auto;
 }
 
 table, th, td {
@@ -61,6 +60,10 @@ button {
     cursor: pointer;
 }
 
+.chart-container canvas {
+    height: 100% !important;
+}
+
 .clear {
     clear: both;
 }
@@ -69,7 +72,6 @@ h2 {
     margin-bottom: 10px;
     font-size: 20px;
 }
-
 /* 移动端布局 */
 @media (max-width: 768px) {
     .tables-and-charts {
@@ -89,5 +91,15 @@ h2 {
     }
     .tables {
         width: 60%;
+    }
+}
+
+
+@media (max-width: 1200px) {
+    .chart-container {
+        width: 100%;
+    }
+    .tables {
+        width: 100%;
     }
 }
